trunk/Archive2/6f/4cf97dbcbe48bc/output
main.cpp: In function 'int main()':
main.cpp:9:5: error: expected primary-expression before '/' token
     /
     ^
main.cpp:12:1: error: expected primary-expression before '}' token
 }
 ^
main.cpp:12:1: error: expected ';' before '}' token
