trunk/Archive2/6f/4cf97dbcbe48bc/main.cpp
#include <iostream>
#include <boost/multiprecision/cpp_int.hpp>
// http://www.boost.org/doc/libs/1_55_0/libs/multiprecision/doc/html/boost_multiprecision/tut/ints/cpp_int.html

int main()
{
    using namespace boost::multiprecision ;
    
    /
    
    
}
